--- a/app/src/main/zy_res/layout/piechart.xml
+++ b/app/src/main/zy_res/layout/piechart.xml
@@ -5,6 +5,6 @@
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/piechart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></com.github.mikephil.charting.charts.PieChart>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.github.mikephil.charting.charts.PieChart>
 </RelativeLayout>
