--- a/app/src/main/zy_res/layout/barchart.xml
+++ b/app/src/main/zy_res/layout/barchart.xml
@@ -5,6 +5,6 @@
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></com.github.mikephil.charting.charts.BarChart>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.github.mikephil.charting.charts.BarChart>
 </RelativeLayout>
