--- a/app/src/main/zy_res/layout/horibarchart.xml
+++ b/app/src/main/zy_res/layout/horibarchart.xml
@@ -5,6 +5,6 @@
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/horichart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></com.github.mikephil.charting.charts.HorizontalBarChart>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.github.mikephil.charting.charts.HorizontalBarChart>
 </RelativeLayout>
