--- a/app/src/main/zy_res/layout/item_lightmanage2.xml
+++ b/app/src/main/zy_res/layout/item_lightmanage2.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="路口"
+            android:text=""
             android:textSize="30dp" />
 
         <View
