--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1f1f1"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
 
     <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/top_title"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="#56abe4"
@@ -36,7 +38,6 @@
     <RelativeLayout
         android:id="@+id/maincontent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </RelativeLayout>
+        android:layout_height="match_parent"></RelativeLayout>
 
 </LinearLayout>
