--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -3,24 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="33dp" >
+            android:layout_marginTop="33dp">
 
             <EditText
                 android:id="@+id/et_user_name"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_name"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:gravity="center"
+                android:hint="请输入用户名"
+                android:singleLine="true">
 
                 <requestFocus />
             </EditText>
@@ -30,45 +32,77 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="33dp" >
+            android:layout_marginTop="33dp">
 
             <EditText
                 android:id="@+id/et_user_pwd"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_pwd"
                 android:layout_weight="1"
-                android:password="true" />
+                android:gravity="center"
+                android:hint="请输入密码"
+                android:password="true"
+                android:singleLine="true" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="33dp" >
+            android:layout_marginTop="33dp">
 
             <EditText
                 android:id="@+id/et_user_pwd_second"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_mspwd"
                 android:layout_weight="1"
-                android:password="true" />
+                android:gravity="center"
+                android:hint="@string/hint_mspwd"
+                android:password="true"
+                android:singleLine="true" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp" >
+            android:layout_marginTop="33dp">
+
+            <EditText
+                android:id="@+id/et_user_phone"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:hint="请输入手机号码"
+                android:inputType="number"
+                android:singleLine="true" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal">
+
 
             <Button
-                android:id="@+id/bt_reg"
-                android:layout_width="match_parent"
+                android:id="@+id/bt_cancel"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="55dp"
                 android:layout_marginRight="55dp"
-                android:text="@string/submit" />
+                android:text="取消" />
+
+
+            <Button
+                android:id="@+id/bt_reg"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="55dp"
+                android:layout_marginRight="55dp"
+                android:text="注册" />
 
         </LinearLayout>
 
