--- a/app/src/main/zy_res/layout/chartmain.xml
+++ b/app/src/main/zy_res/layout/chartmain.xml
@@ -2,26 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp">
+    android:background="#FFFFFF">
 
-    <TextView
-        android:id="@+id/tx_show"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000"
-        android:textSize="30dp" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="50dp"></android.support.v4.view.ViewPager>
 
-    <com.mad.trafficclient.zy_java.view.GlideView
-        android:id="@+id/glideview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"></com.mad.trafficclient.zy_java.view.GlideView>
+        android:layout_height="match_parent"
+        android:layout_margin="30dp">
+
+        <TextView
+            android:id="@+id/tx_show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="#000"
+            android:textSize="30dp" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="50dp"></android.support.v4.view.ViewPager>
+
+        <com.mad.trafficclient.zy_java.view.GlideView
+            android:id="@+id/glideview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"></com.mad.trafficclient.zy_java.view.GlideView>
+    </RelativeLayout>
 </RelativeLayout>
