--- a/app/src/main/st_res/layout/fra_shzs.xml
+++ b/app/src/main/st_res/layout/fra_shzs.xml
@@ -59,8 +59,7 @@
                     <com.github.mikephil.charting.charts.LineChart
                         android:id="@+id/lineChart"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"></com.github.mikephil.charting.charts.LineChart>
+                        android:layout_height="match_parent"></com.github.mikephil.charting.charts.LineChart>
                 </LinearLayout>
             </LinearLayout>
 
