--- a/app/src/main/st_res/layout/ada_yhgl.xml
+++ b/app/src/main/st_res/layout/ada_yhgl.xml
@@ -119,4 +119,11 @@
         android:text="删除"
         android:textColor="#000" />
 
+    <ImageView
+        android:id="@+id/iv_back"
+        android:background="@drawable/icon101"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 </LinearLayout>
