--- a/app/src/main/st_res/layout/fra_sshj.xml
+++ b/app/src/main/st_res/layout/fra_sshj.xml
@@ -4,8 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="100dp"
-    android:paddingRight="100dp"
-    android:paddingBottom="100dp">
+    android:paddingRight="100dp">
+
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="50dp"
+        android:text="XXX"
+        android:textColor="#000"
+        android:textSize="40dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -15,8 +25,10 @@
 
     <com.mad.trafficclient.zy_java.view.GlideView
         android:id="@+id/glideView"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"></com.mad.trafficclient.zy_java.view.GlideView>
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"></com.mad.trafficclient.zy_java.view.GlideView>
 
 
 </LinearLayout>
