--- a/app/src/main/zy_res/layout/car_recharge_1.xml
+++ b/app/src/main/zy_res/layout/car_recharge_1.xml
@@ -8,15 +8,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <TextView
+            style="@style/texystyle"
+            android:layout_width="wrap_content"
+            android:text="我的充值"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/dialog_ed_money"
             android:layout_width="300dp"
-            android:inputType="number"
             android:layout_height="match_parent"
-            android:background="@drawable/peccancy_edit" />
+
+            android:background="@drawable/peccancy_edit"
+            android:inputType="number" />
 
         <TextView
             style="@style/texystyle"
@@ -35,14 +49,16 @@
             android:id="@+id/queding"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp" />
+            android:layout_margin="20dp"
+            android:text="确定" />
 
         <Button
             android:id="@+id/quxiao"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:text="元" />
+
+            android:text="取消" />
     </LinearLayout>
 
 </LinearLayout>
