--- a/app/src/main/zy_res/layout/zy_videoplay_activity.xml
+++ b/app/src/main/zy_res/layout/zy_videoplay_activity.xml
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/image_show"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:clickable="true"
         android:scaleType="center" />
 
 </RelativeLayout>
