--- a/app/src/main/ws_res/layout/ob60_main.xml
+++ b/app/src/main/ws_res/layout/ob60_main.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="30dp"
             android:horizontalSpacing="5dp"
-            android:numColumns="auto_fit"
+            android:numColumns="5"
             android:verticalSpacing="5dp"></GridView>
     </LinearLayout>
 
@@ -45,7 +45,6 @@
 
 
         <TextView
-            android:id="@+id/ob60_toAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -56,11 +55,12 @@
             android:textStyle="bold" />
 
         <GridView
+            android:id="@+id/ob60_toAdd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="30dp"
             android:horizontalSpacing="5dp"
-            android:numColumns="auto_fit"
+            android:numColumns="5"
             android:verticalSpacing="5dp"></GridView>
 
     </LinearLayout>
