--- a/app/src/main/st_res/layout/fra_clsfcx.xml
+++ b/app/src/main/st_res/layout/fra_clsfcx.xml
@@ -31,10 +31,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="查询时间："
+            android:textColor="#000"
+            android:textSize="20dp" />
+
         <Spinner
+            android:id="@+id/sp_start_year"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:background="@drawable/ll_back_clsfcx"></Spinner>
@@ -45,11 +55,47 @@
             android:orientation="vertical">
 
             <Spinner
+                android:id="@+id/sp_start_month"
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:background="@drawable/ll_back_clsfcx"></Spinner>
 
             <Spinner
+                android:id="@+id/sp_start_day"
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ll_back_clsfcx"></Spinner>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:text="<--->"
+            android:textColor="#000"
+            android:textSize="20dp" />
+
+        <Spinner
+            android:id="@+id/sp_end_year"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:background="@drawable/ll_back_clsfcx"></Spinner>
+
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:orientation="vertical">
+
+            <Spinner
+                android:id="@+id/start_end_month"
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ll_back_clsfcx"></Spinner>
+
+            <Spinner
+                android:id="@+id/start_end_day"
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:background="@drawable/ll_back_clsfcx"></Spinner>
